fix: the unintended overflow of the SectinBackground

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+
+
+.section-background:before {
+    content: "";
+    position: absolute;
+    width: 110%;
+    height: 110%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: rgb(159, 175, 145) ;
+    transform: rotate(-1deg);
+}
